k8s/dev/04-auth-service.yaml
# Auth Service — DEV (lighter resources, maxReplicas: 2)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: dev
  labels:
    app: auth-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
      containers:
        - name: auth-service
          image: abhinavbabu33/shopnova-auth-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8001
          resources:
            requests:
              cpu: 64m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
          livenessProbe:
            httpGet:
              path: /health
              port: 8001
            initialDelaySeconds: 20
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 8001
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: dev
  labels:
    app: auth-service
spec:
  selector:
    app: auth-service
  ports:
    - port: 8001
      targetPort: 8001
  type: ClusterIP
