k8s/dev/06-order-service.yaml
# Order Service — DEV
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: dev
  labels:
    app: order-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
      containers:
        - name: order-service
          image: abhinavbabu33/shopnova-order-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8003
          resources:
            requests:
              cpu: 64m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
          livenessProbe:
            httpGet:
              path: /health
              port: 8003
            initialDelaySeconds: 20
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 8003
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: dev
  labels:
    app: order-service
spec:
  selector:
    app: order-service
  ports:
    - port: 8003
      targetPort: 8003
  type: ClusterIP
