k8s/dev/07-notification-service.yaml
# Notification Service — DEV
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: dev
  labels:
    app: notification-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
      containers:
        - name: notification-service
          image: abhinavbabu33/shopnova-notification-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8004
          resources:
            requests:
              cpu: 32m
              memory: 64Mi
            limits:
              cpu: 125m
              memory: 128Mi
          livenessProbe:
            httpGet:
              path: /health
              port: 8004
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 8004
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: dev
  labels:
    app: notification-service
spec:
  selector:
    app: notification-service
  ports:
    - port: 8004
      targetPort: 8004
  type: ClusterIP
